--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
-    "plugins": ["@babel/syntax-dynamic-import"],
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "modules": false
-            }
-        ]
-    ]
+  "plugins": ["@babel/syntax-dynamic-import", "@babel/plugin-transform-runtime"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ],
+    "@babel/preset-react"
+  ]
 }
