--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "homepage": "https://bitbucket.org/homeflow_developers/homeflow_front_end_tech_test#readme",
   "devDependencies": {
     "@babel/core": "^7.14.0",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.14.1",
     "@webpack-cli/generators": "^2.1.0",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^5.2.4",
     "sass": "^1.22.6",
     "sass-loader": "^11.0.1",
@@ -36,5 +38,16 @@
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@babel/preset-react": "^7.16.7",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
+    "uuid": "^8.3.2"
   }
 }
